# SAM-Coin

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libsamcoinconsensus.pc.in
doc/man/: Makefile.am  samcoin-cli.1  samcoin-qt.1  samcoin-tx.1  samcoin-util.1  samcoin-wallet.1  samcoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  (+127 more)
src/bench/: .gitignore  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_samcoin.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  lockedpool.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  peer_eviction.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibcxx_sanity.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: common.cpp  common.h  samcoin-node.cpp  samcoind.cpp
src/interfaces/: README.md  chain.h  echo.cpp  echo.h  handler.cpp  handler.h  init.cpp  init.h  ipc.h  node.h  wallet.h
src/ipc/: exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/logging/: timer.h
src/node/: blockstorage.cpp  blockstorage.h  coin.cpp  coin.h  coinstats.cpp  coinstats.h  context.cpp  context.h  interfaces.cpp  psbt.cpp  psbt.h  transaction.cpp  transaction.h  ui_interface.cpp  ui_interface.h  utxo_snapshot.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  (+83 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  net.h  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  samcoinconsensus.cpp  samcoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: README.md  SECURITY.md  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  coinstatsindex_tests.cpp  compilerbug_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  flatfile_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  i2p_tests.cpp  interfaces_tests.cpp  key_io_tests.cpp  key_tests.cpp  logging_tests.cpp  main.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  (+46 more)
src/univalue/: README.md
src/util/: asmap.cpp  asmap.h  bip32.cpp  bip32.h  bytevectorhash.cpp  bytevectorhash.h  check.h  epochguard.h  error.cpp  error.h  fees.cpp  fees.h  getuniquepath.h  golombrice.h  hash_type.h  hasher.cpp  hasher.h  macros.h  message.cpp  message.h  moneystr.cpp  moneystr.h  rbf.cpp  rbf.h  readwritefile.cpp  readwritefile.h  serfloat.cpp  serfloat.h  settings.cpp  settings.h  sock.cpp  sock.h  spanparsing.cpp  spanparsing.h  strencodings.cpp  strencodings.h  string.cpp  string.h  system.cpp  system.h  (+14 more)
src/wallet/: bdb.cpp  bdb.h  (+46 more)
(+798 files in other folders)
