dist_man1_MANS=

if BUILD_SAMCOIND
  dist_man1_MANS+=samcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=samcoin-qt.1
endif

if BUILD_SAMCOIN_CLI
  dist_man1_MANS+=samcoin-cli.1
endif

if BUILD_SAMCOIN_TX
  dist_man1_MANS+=samcoin-tx.1
endif

if BUILD_SAMCOIN_UTIL
  dist_man1_MANS+=samcoin-util.1
endif

if ENABLE_WALLET
if BUILD_SAMCOIN_WALLET
  dist_man1_MANS+=samcoin-wallet.1
endif
endif
